# ngx-inference

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  build.rs  docker-compose.yml
.github/workflows/: test-module.yml
docker/: README.md  extproc.Dockerfile  nginx-test.conf  nginx.conf  ngx-inference.Dockerfile
docker/echo-server/: Dockerfile  custom-echo-server.js
docker/mock-extproc/: Dockerfile
docker/nginx/: Dockerfile  nginx-test.conf
docs/: configuration.md  epp-async-architecture.md  epp-file-buffering.md  event-loop-flow.md
docs/examples/: README.md
docs/examples/advanced-config/: nginx.conf
docs/examples/basic-config/: nginx.conf
proto/envoy/config/core/v3/: base.proto
proto/envoy/extensions/filters/http/ext_proc/v3/: processing_mode.proto
proto/envoy/service/ext_proc/v3/: external_processor.proto
proto/envoy/type/v3/: http_status.proto
src/: grpc.rs  lib.rs  model_extractor.rs  protos.rs
src/epp/: async_processor.rs  callbacks.rs  context.rs  mod.rs
src/modules/: bbr.rs  config.rs  epp.rs  mod.rs
tests/: Dockerfile.test  README.md  docker-compose.test.yml  docker-compose.yml  generate-config.sh  setup-local-dev.sh  setup-local-dev.sh.original  setup_test_env.sh  test-config.sh  test_docker_simple.sh  test_large_body.sh
tests/configs/: bbr_off_epp_off.conf  bbr_off_epp_on.conf  bbr_off_epp_on_untrusted_tls_allow.conf  bbr_off_epp_on_untrusted_tls_deny.conf  bbr_on_epp_off.conf  bbr_on_epp_on.conf  nginx-base.conf  nginx-bbr_off_epp_off.conf  nginx-bbr_off_epp_on.conf  nginx-bbr_on_epp_off.conf  nginx-bbr_on_epp_on.conf  nginx-original.conf
tests/kind-ngf/: .gitignore  README.md
tests/kind-ngf/cluster/: kind-config.yaml
tests/kind-ngf/manifests/: 01-namespace.yaml  02-vllm-backend.yaml  02-vllm-simulator.yaml  03-inferencepool.yaml  04-nginx-inference.yaml  05-echo-server.yaml
tests/kind-ngf/scripts/: setup.sh  test-kind.sh
