[package]
name = "ngx-inference"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["NGX Inference Module"]

[lib]
name = "ngx_inference"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "extproc_mock"
path = "bin/extproc_mock.rs"
required-features = ["extproc-mock"]

[features]
# When building as a standalone dynamic module outside the nginx build system
# this feature exports the ngx_modules table.
export-modules = []
# Enable vendored nginx sources via ngx crate's feature. Build with:
#   cargo build --features vendored
vendored = ["ngx/vendored"]
extproc-mock = []

[dependencies]
ngx = "0.5"
bytes = "1"
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "time", "net", "signal"] }
tokio-stream = "0.1"
tonic = { version = "0.14", features = ["transport", "tls-webpki-roots"] }
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"
serde_json = "1.0"
libc = "0.2"
rustls = "0.23"
rustls-pki-types = "1"
tokio-rustls = "0.26"

[build-dependencies]
tonic-prost-build = "0.14"
protoc-bin-vendored = "3"

[package.metadata.docs.rs]
features = ["export-modules"]
